ui/utilities/common-newport/_index.scss
/* ... */
@media only screen and (min-width: 64em) {
  .nds-table_bordered:not(.nds-no-row-hover) tbody tr:hover>td:not(.nds-is-selected),
  .nds-table_bordered:not(.nds-no-row-hover) tbody tr:hover>th:not(.nds-is-selected),
  .nds-table_bordered:not(.nds-no-row-hover) tbody tr:focus>td:not(.nds-is-selected),
  .nds-table_bordered:not(.nds-no-row-hover) tbody tr:focus>th:not(.nds-is-selected),
  .nds-table--bordered:not(.nds-no-row-hover) tbody tr:hover>td:not(.nds-is-selected),
  .nds-table--bordered:not(.nds-no-row-hover) tbody tr:hover>th:not(.nds-is-selected),
  .nds-table--bordered:not(.nds-no-row-hover) tbody tr:focus>td:not(.nds-is-selected),
  .nds-table--bordered:not(.nds-no-row-hover) tbody tr:focus>th:not(.nds-is-selected) {
    box-shadow: $color-border-input 0 -1px 0 inset, $color-border-input 0 1px 0 inset;
  }
}

@media only screen and (min-width: 64em) {
  .nds-table:not(.nds-no-row-hover) tbody tr:hover>td,
  .nds-table:not(.nds-no-row-hover) tbody tr:hover>th,
  .nds-table:not(.nds-no-row-hover) tbody tr:focus>td,
  .nds-table:not(.nds-no-row-hover) tbody tr:focus>th {
    background-color: $color-background-desertstorm;
  }
}

.nds-mob-conf {
  svg.nds-icon {
    fill: $color-light-blue-hue;
  }
  .nds-mob-conf__body {
    display: inline-block;
    margin-#{$left}: 0.5rem;
    .nds-form-element__label {
      color: $color-light-blue-hue;
      font-size: 0.8125rem;
      span.nds-ref-number {
        font-weight: 700;
      }
    }
  }
}

.nds-disclosure .nds-form-element__label,
.nds-range .nds-form-element__label span {
    font-size: 0.875rem;
}

form {
  .ng-valid span.nds-required {
    color: $color-valid-control;
  }
}

